src/nl/2.1/attribute/attribute-input.md
# Attribute Input Type

Attributen kunnen verschillende invoertypen hebben die niet alleen bepalen hoe u de waarden voor het attribuut invoert, maar ook hoe kopers attributen kunnen selecteren in het geval van opties, of waarden kunnen invoeren.

Product Attributes zijn een verzameling kenmerken die een bepaald product of een groep goederen definiëren. Dit betekent dat maat, kleur, smaak, verpakkingstype, enz. attributen vormen. Productattributen gaan niet alleen over de algemene beschrijving van een product, maar spreken over de waarde van producten die het uniek maakt.

| Eigenschap  | Beschrijving                                                                                           |
|-----------------|------------------------------------------------------------------------------------------------------------------------------------|
| Text      | Een invoerveld voor één regel tekst.                                                                            |
| Text Area   | Een invoerveld voor meerdere regels voor het invoeren van alinea's tekst, zoals een productbeschrijving.                                                                    |
| Boolean    | Toont een schakelaar om te wisselen tussen Ja en Nee.                                                                 |
| Select        | Toont een vervolgkeuzelijst met waarden die één selectie accepteert. Ondersteunt **Swatch Types** (Color, Image, Text) voor visuele optieweergave.                      |
| Multi Select        | Toont een vervolgkeuzelijst met waarden die meerdere selecties accepteert. Ondersteunt **Swatch Types** (Color, Image, Text) voor visuele optieweergave.                                                                           |
| Date       | Toont een datumwaarde in de gewenste indeling.
| Date Time       | Toont een datum- en tijdwaarde in de gewenste indeling en tijdzone.
| Image     | Dit wordt gebruikt om de afbeelding te tonen.
| Gallery | Een Gallery-attribuut waarmee u meerdere afbeeldingen en **video's** per product kunt beheren en weergeven, waardoor de productmedia-ervaring wordt verbeterd.
| File       | File-attributen verwijzen naar een specifiek type attributen waarmee u bestanden aan het product kunt koppelen.
| Checkbox       | Het vertegenwoordigt een staat of optie die kan worden geschakeld.
| Price | Dit invoertype wordt gebruikt om prijsvelden aan te maken naast de vooraf gedefinieerde attributen: Prices.

## Swatch Types (Nieuw in v2.0)

**Select**- en **Multiselect**-attributen ondersteunen nu visuele swatch-typen:

| Swatch Type | Beschrijving |
|-------------|-------------|
| Dropdown | Standaard dropdown-selectie (standaardgedrag) |
| Color | Toont kleurstalen — elke optie toont een gekleurd vakje |
| Image | Toont afbeeldingsminiaturen — elke optie toont een kleine afbeelding |
| Text | Toont teksten als gestileerde visuele swatches |

Swatch-typen worden geconfigureerd bij het aanmaken of bewerken van een Select/Multiselect-attribuut. Zie [Productattribuut aanmaken](./product-attribute.md#swatch-types) voor instellingsinstructies.
